helms/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello-nginx.maxxx.dev
      secretName: tls-secret
  rules:
    - host: hello-nginx.maxxx.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-deployment-service
                port:
                  number: 80
